<resources>
    <string name="Address">Address</string>
    <string name="Mobile">Mobile</string>
    <string name="Rs">₹</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sort">Sort</string>
    <string name="addlocation">Add Location</string>
    <string name="addproject">Add Projects</string>
    <string name="address">Address</string>
    <string name="admission_no">Admission No</string>
    <string name="airplane">Airplane mode</string>
    <string name="airplane_on">You have turned on the airplane mode.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_have_an_account_signin">Already have an account? Sign In</string>
    <string name="annual_ctc">Annual CTC</string>
    <string name="app_name">Smart School Services</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artdesign">Art &amp; Design</string>
    <string name="attendance">"Today's Attendance"</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="bio">Bio in less than 300 characters</string>
    <string name="birthday">Birthday</string>
    <string name="change_language">Change Language</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bus_no">Bus Number</string>
    <string name="business_card">Business Card</string>
    <string name="button_add">Add child</string>
    <string name="button_remove">Remove child</string>
    <string name="calendar">Calendar</string>
    <string name="callnow">CALL NOW</string>
    <string name="center_click">Center has been clicked</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="class_teacher">Class Teacher</string>
    <string name="cloud">Cloud</string>
    <string name="cmpnydscptn">Company Description in less than 300 characters</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="company">Company Name</string>
    <string name="company_description">Company Description in less than 300 Characters</string>
    <string name="company_name">Company name</string>
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="ctc_details">CTC Details</string>
    <string name="current_ctc">Current CTC</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="description">Description about the project</string>
    <string name="designation">Designation</string>
    <string name="dialog_first_child_position">Set the firstChildPosition attribute</string>
    <string name="dialog_is_rotating">Set isRotating attribute</string>
    <string name="dialog_radius">Set radius attribute</string>
    <string name="dialog_radius_value">radius: %ddp</string>
    <string name="dialog_speed">Set speed attribute</string>
    <string name="dialog_speed_value">speed: %d</string>
    <string name="disconnect">Disconnect</string>
    <string name="dob">DOB</string>
    <string name="dont_have_an_account">"Don't have an account?"</string>
    <string name="email">E-mail</string>
    <string name="employee_id">Employee ID</string>
    <string name="endedon">Ended on</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_null_person">Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is enabled for your project, you have a properly configured google-services.json file and that your device has an internet connection.</string>
    <string name="established">Established</string>
    <string name="experience">Experience</string>
    <string name="facebook">Facebook</string>
    <string name="first_child_position">firstChildPosition</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="from">From</string>
    <string name="full_name">Full Name</string>
    <string name="fullname">Full Name</string>
    <string name="geofence_not_available">geofence_not_available</string>
    <string name="geofence_too_many_geofences">geofence_too_many_geofences</string>
    <string name="geofence_too_many_pending_intents">geofence_too_many_pending_intents</string>
    <string name="geofence_transition_entered">geofence_transition_entered</string>
    <string name="geofence_transition_exited">geofence_transition_exited</string>
    <string name="geofence_transition_invalid_type">geofence_transition_invalid_type</string>
    <string name="geofence_transition_notification_text">geofence_transition_notification_text</string>
    <string name="google_maps_key">AIzaSyDsdLGGOuNZfPoduvIljmRS8aKOlNthp5o</string>
    <string name="history">History</string>
    <string name="id_no">ID NO</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="interests">Interests</string>
    <string name="is_rotating">isRotating</string>
    <string name="joining_Date">Joining Date</string>
    <string name="key">Key</string>
    <string name="languages">Languages</string>
    <string name="loading">Loading…</string>
    <string name="location">Location</string>
    <string name="mail">Mail</string>
    <string name="main_any_view">Any view</string>
    <string name="main_attributes">XML attributes</string>
    <string name="main_dynamic_attributes">Dynamic attributes</string>
    <string name="main_dynamic_children">Dynamic children</string>
    <string name="main_no_rotation">No rotation</string>
    <string name="main_sample">Sample Circle menu</string>
    <string name="make_the_most_on_search">"MAKE THE MOST
ON SEARCH"</string>
    <string name="mobile">Mobile</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="music">Music</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="name_rest_activity">RestApiActivity</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="next">Go to next</string>
    <string name="no_internet_body">You are not connected to the Internet</string>
    <string name="no_internet_title">No Internet</string>
    <string name="notifications">Notifications</string>
    <string name="other_allowances">Other Allowances</string>
    <string name="others">Others</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="pf">PF</string>
    <string name="phone_no">Phone No.</string>
    <string name="pick_image_from_gallery">PICK IMAGE FROM GALLERY</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="previous">Go to previous</string>
    <string name="principal_message">"\"You can have great teachers, but if you don't have a good principal, you won't have a good school.\""</string>
    <string name="privacy_policy">By clicking Signup, you agree to TAGSIFT User Agreement, Privacy Policy\\nand Cookie Policy</string>
    <string name="profile">Profile</string>
    <string name="project_title">Project Title</string>
    <string name="projectdscptn">Description about the project</string>
    <string name="projects">PROJECTS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="pt">PT</string>
    <string name="qualification">Highest Qualification</string>
    <string name="radius">radius</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="retype_password">Re-type Password</string>
    <string name="school">School</string>
    <string name="science">Science</string>
    <string name="search_menu_title">Search</string>
    <string name="server_client_id">862127277466-qp17hum5bumbp94veq8n7fo36tee1umf.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed in</string>
    <string name="signed_in_err">Error: please check logs.</string>
    <string name="signed_out">Signed out</string>
</resources>