<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:n1="http://schemas.android.com/apk/res/android"
    n1:id="@+id/coordinatorlayout"
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent">

    <ScrollView
        style="@style/Scrollview_Style"
        n1:background="@color/background">

        <LinearLayout
            n1:layout_width="fill_parent"
            n1:layout_height="fill_parent"
            n1:orientation="vertical"
            n1:padding="@dimen/_12sdp">

            <FrameLayout
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginBottom="@dimen/_16sdp"
                n1:background="@drawable/borders_rltb_white_background">

                <Spinner
                    n1:id="@+id/spnr_teacher"
                    n1:layout_width="fill_parent"
                    n1:layout_height="@dimen/_35sdp"
                    n1:alpha="0.7"
                    n1:entries="@array/teachers"
                    n1:paddingLeft="@dimen/_4sdp" />
            </FrameLayout>

            <com.apps.smartschoolmanagement.utils.ButtonTouchEffect
                n1:id="@+id/btn_search"
                style="@style/Button_Style"
                n1:layout_gravity="center_horizontal"
                n1:paddingLeft="@dimen/_35sdp"
                n1:paddingRight="@dimen/_35sdp"
                n1:text="Search"
                n1:visibility="gone" />

            <TableLayout
                n1:id="@+id/table_layout"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginTop="@dimen/_10sdp"
                n1:background="@drawable/borders_table"
                n1:visibility="gone">

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="1.5dip"
                    n1:background="@color/colorPrimary"
                    n1:elevation="8.0dip"
                    n1:gravity="center"
                    n1:outlineProvider="background">

                    <TextView
                        n1:id="@+id/teacherName"
                        style="@style/Textview_Style_Header"
                        n1:padding="@dimen/_8sdp"
                        n1:textColor="#ffffffff"
                        n1:textSize="22.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="2.0dip"
                    n1:background="#99ffffff">

                    <TextView
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:text="@string/current_ctc"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />

                    <TextView
                        n1:id="@+id/current_ctc"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="2.0dip"
                    n1:background="#99ffffff">

                    <TextView
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:text="@string/annual_ctc"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />

                    <TextView
                        n1:id="@+id/annul_ctc"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="2.0dip"
                    n1:background="#99ffffff"
                    n1:paddingBottom="10.0dip">

                    <TextView
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:text="@string/other_allowances"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />

                    <TextView
                        n1:id="@+id/other_allowances"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_marginLeft="2.0dip"
                    n1:layout_marginRight="2.0dip"
                    n1:background="#fff9ccc7"
                    n1:elevation="5.0dip"
                    n1:gravity="center"
                    n1:outlineProvider="background">

                    <TextView
                        style="@style/Textview_Style_Header"
                        n1:padding="@dimen/_8sdp"
                        n1:text="Monthly Deduction"
                        n1:textSize="20.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="2.0dip"
                    n1:background="#99ffffff">

                    <TextView
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:text="@string/pf"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />

                    <TextView
                        n1:id="@+id/pf"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="2.0dip"
                    n1:background="#99ffffff">

                    <TextView
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:text="@string/pt"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />

                    <TextView
                        n1:id="@+id/pt"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />
                </TableRow>

                <TableRow
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:layout_margin="2.0dip"
                    n1:background="#99ffffff">

                    <TextView
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:text="@string/others"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />

                    <TextView
                        n1:id="@+id/others"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:gravity="center"
                        n1:padding="@dimen/_8sdp"
                        n1:textAppearance="?android:textAppearanceLarge"
                        n1:textSize="17.0sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/layout_loading" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>